browser/themes/windows/places/editBookmark.css
@media (prefers-color-scheme: dark) {
  .expander-up,
  .expander-down {
    --expander-background-color-selected: rgba(249, 249, 250, 0.15);
    --expander-background-color-hover: rgba(250, 250, 249, 0.1);
    appearance: none;
  }

  .expander-up:hover,
  .expander-down:hover {
    background-color: var(--expander-background-color-hover);
  }

  .expander-up:active:hover,
  .expander-down:active:hover {
    background-color: var(--expander-background-color-selected);
  }
}

#editBookmarkPanelRows > vbox {
  margin-bottom: .5em;
}



#editBMPanel_folderMenuList::part(icon) {
  width: 16px;
  height: 16px;
}

.folder-icon > .menu-iconic-left {
  display: -moz-box;
}

.folder-icon {
  list-style-image: url("chrome://browser/skin/places/folder.svg") !important;
  -moz-context-properties: fill;
  fill: currentColor;
}



.expander-up,
.expander-down {
  min-width: 0;
  padding: 1px;
  margin: 0;
  margin-inline-end: 4px;
  list-style-image: url("chrome://global/skin/icons/arrow-dropdown-16.svg");
  -moz-context-properties: fill, fill-opacity;
  fill: currentColor;
  fill-opacity: 0.8;
  color: unset;
}

.expander-up {
  transform: scaleY(-1);
}

.expander-up > .button-box,
.expander-down > .button-box {
  padding: 0;
}

#editBMPanel_folderTree {
  margin-block: 2px;
}






#editBMPanel_tagsField #treecolAutoCompleteValue {
  visibility: collapse;
}

#editBMPanel_tagsSelector > richlistitem > image {
  appearance: auto;
  -moz-default-appearance: checkbox;
  -moz-box-align: center;
  margin: 0 2px;
  border: 1px solid -moz-DialogText;
  min-width: 13px;
  min-height: 13px;
  background: -moz-Field no-repeat 50% 50%;
}



#editBMPanel_folderMenuList[selectedGuid="toolbar_____"],
#editBMPanel_toolbarFolderItem {
  list-style-image: url("chrome://browser/skin/places/bookmarksToolbar.svg") !important;
}

#editBMPanel_folderMenuList[selectedGuid="menu________"],
#editBMPanel_bmRootItem {
  list-style-image: url("chrome://browser/skin/places/bookmarksMenu.svg") !important;
}

#editBMPanel_folderMenuList[selectedGuid="unfiled_____"],
#editBMPanel_unfiledRootItem {
  list-style-image: url("chrome://browser/skin/places/unfiledBookmarks.svg") !important;
}

